src/objects/Loan_Account__c.object
<CustomObject>
    <description>Loan Account</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrual_Start_Date__c</fullName>
        <description>Date from the interest accrual will start</description>
        <label>Accrual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accrual_Start_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accrual Start Days after the loan effective date.</description>
        <label>Accrual Start Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accrual_Stop_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if Accrual needs to be stopped.</description>
        <label>Accrual Stop Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <formula>IF(AND(Number_of_Days_Overdue__c&gt;0,Number_of_Days_Overdue__c&lt;=30), &quot;0-30&quot;, IF(AND(Number_of_Days_Overdue__c&gt;30,Number_of_Days_Overdue__c&lt;=60),&quot;31-60&quot;,
IF(AND(Number_of_Days_Overdue__c&gt;60,Number_of_Days_Overdue__c&lt;=90),&quot;61-90&quot;,
IF(AND(Number_of_Days_Overdue__c&gt;90,Number_of_Days_Overdue__c&lt;=120),&quot;91-120&quot;,
IF(AND(Number_of_Days_Overdue__c&gt;120,Number_of_Days_Overdue__c&lt;=180),&quot;121-180&quot;,
IF(Number_of_Days_Overdue__c&gt;180,&quot;180+&quot;,
&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Income__c</fullName>
        <label>Average Monthly Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balloon_Payment__c</fullName>
        <label>Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cleared_Disbursal_Txn_Count__c</fullName>
        <label>Cleared Disbursal Txn Count</label>
        <summaryFilterItems>
            <field>Loan_Disbursal_Transaction__c.Cleared__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Loan_Disbursal_Transaction__c.Reversed__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Disbursal_Transaction__c.Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Account Owner</description>
        <inlineHelpText>Loan Account Owner</inlineHelpText>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co Applicant</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Loan Accounts (Co Applicant)</relationshipLabel>
        <relationshipName>Loan_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Notes__c</fullName>
        <description>Collateral Notes</description>
        <inlineHelpText>Collateral Notes</inlineHelpText>
        <label>Collateral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Asset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Loan Accounts (Current Loan Officer)</relationshipLabel>
        <relationshipName>Loan_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delinquency_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delinquency Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delinquent_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursal_Date__c</fullName>
        <description>This date is used as a Loan Start Date to generate the repayment schedule. The user can fill this field at the beginning of the loan to project when loan is disbursed; but this field can be updated anytime before disbursement.</description>
        <inlineHelpText>This date is used as a Loan Start Date to generate the repayment schedule. The user can fill this field at the beginning of the loan to project when loan is disbursed; but this field can be updated anytime before disbursement.</inlineHelpText>
        <label>Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Day for the loan account.</description>
        <label>Due Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excess__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Disbursal_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Expected Disbursal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Repayment_Start_Date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <label>Expected Repayment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Accrued__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Fee Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Fee Set</inlineHelpText>
        <label>Fee Set</label>
        <referenceTo>Fee_Set__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fees_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Paid</description>
        <inlineHelpText>Fees Paid</inlineHelpText>
        <label>Fees Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Remaining</description>
        <inlineHelpText>Fees Remaining</inlineHelpText>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_Suspended__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes the total fees amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total fees amount, which has been suspended.</inlineHelpText>
        <label>Fees Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Installment_Date__c</fullName>
        <description>Date of the first installment</description>
        <inlineHelpText>Date of the first installment</inlineHelpText>
        <label>First Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Loan_Payment__c</fullName>
        <label>Frequency of Loan Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funder</label>
        <referenceTo>Funder__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grace_Period_for_Repayments__c</fullName>
        <description>Inherited from product definition.
If grace period type (as per product definition) is “None”, OR,  If Interest is deducted at disbursement, then this field is disabled.  If the loan account is still in grace period, the length of grace period can be extended or reduced.  It cannot be reduced for the period already crossed. For example, if the grace period is for three installments, and when the account is at 0.5 installments, it cannot be reduced to one installment, but can be reduced to two installments.</description>
        <inlineHelpText>If grace period type is “None”, OR,  If Interest is deducted at disbursement, then this field is disabled.  If the loan account is still in grace period, the length of grace period can be extended or reduced.</inlineHelpText>
        <label>Grace Period for Repayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Loan Accounts (Guarantor)</relationshipLabel>
        <relationshipName>Loan_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_Suspended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Income Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Accrued_Not_Due__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This field gets updated on Due date. It is the accrued interest that is posted on the account.</description>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Calculation_Method__c</fullName>
        <description>Interest Calculation Method</description>
        <inlineHelpText>Interest Calculation Method</inlineHelpText>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declining Balance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_On_Overdue_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest on overdue amount paid so far.</description>
        <inlineHelpText>Interest on overdue amount paid so far.</inlineHelpText>
        <label>Interest On Overdue Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_On_Overdue_Suspended__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes the total interest on the overdue amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total interest on the overdue amount, which has been suspended.</inlineHelpText>
        <label>Interest On Overdue Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_On_Total_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest on total overdue</description>
        <inlineHelpText>Interest on total overdue</inlineHelpText>
        <label>Interest On Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Only_Period__c</fullName>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Paid
Account Balance Details- System calculated Uneditable fields</description>
        <inlineHelpText>Interest Paid
Account Balance Details- System calculated Uneditable fields</inlineHelpText>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Last__c</fullName>
        <description>Last Interest Rate</description>
        <label>Last Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>Interest Rate</description>
        <inlineHelpText>Interest Rate</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Remaining</description>
        <inlineHelpText>Interest Remaining</inlineHelpText>
        <label>Financed Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Suspended__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes the total interest amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total interest amount, which has been suspended.</inlineHelpText>
        <label>Interest Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Accrual_Date__c</fullName>
        <description>Last accrual Date on loan account</description>
        <label>Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Installment_Date__c</fullName>
        <description>Date of the last installment paid</description>
        <inlineHelpText>Date of the last installment paid</inlineHelpText>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoanCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>LoanCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Loan Account External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>Loan Amount</description>
        <inlineHelpText>Loan Amount</inlineHelpText>
        <label>Loan Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Cycle_Count__c</fullName>
        <label>Loan Cycle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Product Name</description>
        <inlineHelpText>Loan Product Name</inlineHelpText>
        <label>Loan Product Name</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Purpose</description>
        <inlineHelpText>Loan Purpose</inlineHelpText>
        <label>Loan Purpose</label>
        <referenceTo>Loan_Purpose__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Bad Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Obligations met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- Written Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed to LO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maturity_Date_Current__c</fullName>
        <label>Maturity Date Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <description>This field is used only for &apos;Balloon Payment&apos; loan products.</description>
        <inlineHelpText>This field is used only for &apos;Balloon Payment&apos; loan products.</inlineHelpText>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Field_3__c</fullName>
        <label>New Field 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Due_Generation_Date__c</fullName>
        <description>Next Due Generation Date.</description>
        <label>Next Due Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Installment_Date__c</fullName>
        <description>Date of the next installment</description>
        <inlineHelpText>Date of the next installment</inlineHelpText>
        <label>Next Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Repayment_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the amount due as next repayment for this account as of today</description>
        <inlineHelpText>Tells the amount due as next repayment for this account as of today</inlineHelpText>
        <label>Next Repayment Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Overdue__c</fullName>
        <label>Number of Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <description>Number of installments</description>
        <inlineHelpText>Number of installments</inlineHelpText>
        <label>Number of Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Past_Installments__c</fullName>
        <label>Number of Past Installments</label>
        <summaryFilterItems>
            <field>Repayment_Schedule__c.Past_Due_Date__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Repayment_Schedule__c.Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oldest_Due_Date__c</fullName>
        <description>Oldest Due Date</description>
        <label>Oldest Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overdue_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the amount overdue for this account as of today</description>
        <inlineHelpText>Tells the amount overdue for this account as of today</inlineHelpText>
        <label>Overdue Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Interest_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overdue Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue interest from previous installments</description>
        <inlineHelpText>Overdue interest from previous installments</inlineHelpText>
        <label>Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Penalty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue penalty from previous installments.</description>
        <inlineHelpText>Overdue penalty from previous installments.</inlineHelpText>
        <label>Overdue Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue principal from earlier installments.</description>
        <inlineHelpText>Overdue principal from earlier installments.</inlineHelpText>
        <label>Overdue Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Off_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the pay off amount for this account as of today</description>
        <inlineHelpText>Tells the pay off amount for this account as of today</inlineHelpText>
        <label>Pay Off Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Loan payment amount. It excludes any fee that is gathered as a part of EMI.</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Tolerance_End_Date__c</fullName>
        <description>End date for the payment tolerance</description>
        <inlineHelpText>End date for the payment tolerance</inlineHelpText>
        <label>Payment Tolerance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Tolerance_Rate__c</fullName>
        <label>Payment Tolerance Rate</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Tolerance_Start_Date__c</fullName>
        <description>Start date to apply the payment tolerance</description>
        <inlineHelpText>Start date to apply the payment tolerance</inlineHelpText>
        <label>Payment Tolerance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Penalty_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Penalty Paid</description>
        <inlineHelpText>Penalty Paid</inlineHelpText>
        <label>Penalty Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penalty_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Penalty Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pmt_Amt_Cur__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Bill_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days before due date to have the bill generated.</description>
        <label>Pre Bill Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Installment_Date__c</fullName>
        <description>The date of the installment currently being paid</description>
        <inlineHelpText>The date of the installment currently being paid</inlineHelpText>
        <label>Previous Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Addition to the Principal amount made through Principal Adjustment transaction.</inlineHelpText>
        <label>Principal Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal Paid
Account Balance Details- System calculated Uneditable fields</description>
        <inlineHelpText>Principal Paid
Account Balance Details- System calculated Uneditable fields</inlineHelpText>
        <label>Principal Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal Remaining</description>
        <inlineHelpText>Principal Remaining</inlineHelpText>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Change_Dt_Last__c</fullName>
        <label>Last Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Change_Dt_Next__c</fullName>
        <label>Next Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_Procedure__c</fullName>
        <label>Repayment Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayment_Schedule_Count__c</fullName>
        <label>Repayment Schedule Count</label>
        <summaryFilterItems>
            <field>Repayment_Schedule__c.Is_Archived__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Repayment_Schedule__c.Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Repayment_Tied_to_Meeting_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Repayment Tied to Meeting Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repayments_Count__c</fullName>
        <description>Repayments Count</description>
        <inlineHelpText>Repayments Count</inlineHelpText>
        <label>Repayments Count</label>
        <summaryForeignKey>Loan_Payment_Transaction__c.Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reserve_Amount_for_Next_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount to be used to satisfy future dues.</inlineHelpText>
        <label>Reserve Amount for Next Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Product</label>
        <referenceTo>Savings_Product__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Order__c</fullName>
        <formula>CASE( 
  Loan_Status__c, &apos;Active - Bad Standing&apos;, 1,
    100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Cur__c</fullName>
        <description>Current Term</description>
        <label>Current Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>